--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ main h1 {
 }
 
 .project {
-    display: flex;
-    justify-content: space-between;
+    display: flex-start;
+    justify-content: center;
     align-items: center;
     background-color: #ACC382;
     border: 2px solid black;
@@ -158,6 +158,7 @@ main h1 {
     display: flex-wrap;
     justify-content: center;
     align-items: center;
+    width: 400px;
 }
 
 footer {
