--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ main h1 {
 
 .project {
     display: flex-start;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background-color: #ACC382;
     border: 2px solid black;
@@ -156,9 +156,9 @@ main h1 {
 
 .project-detail {
     display: flex-wrap;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    width: 400px;
+    width: 700px;
 }
 
 footer {
