--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ main h1 {
     display: flex-wrap;
     justify-content: start;
     align-items: center;
-    width: 700px;
+    width: 100%;
 }
 
 footer {
